[package]
name = "octocrabby"
version = "0.1.0"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/octocrabby"
keywords = ["github"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
csv="1.1"
futures = "0.3"
itertools = "0.10"
log = "0.4"
octocrab = "0.16"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tryhard = "0.4"
